flaskk/qa-comm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert -v
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: qa-comm
  name: qa-comm
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qa-comm
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert -v
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: qa-comm
    spec:
      containers:
      - image: shivam111sharma/practice1:flask-0.1
        imagePullPolicy: ""
        name: communication-gateway-qa
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
