flaskk/in.yaml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: web2
    servicePort: 8080
