flaskk/ingress.yaml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: comm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: comm
          servicePort: 5000
