flaskk/qa-ingress.yaml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: ingress-comm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: qa
spec:
  rules:
  - http:
      paths:
      - path: /qa
        backend:
          serviceName: comm
          servicePort: 5000
